--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,5 +36,18 @@ jobs:
 
       - name: Deploy to EC2
         run: |
-          ssh -vvv -i so-precious-pie.pem -o StrictHostKeyChecking=no ec2-user@ec2-13-125-27-88.ap-northeast-2.compute.amazonaws.com 'cd /home/ec2-user/devlounge-app && sudo docker pull jjalseu/devlounge:latest && sudo docker stop devlounge-container || true && sudo docker rm devlounge-container || true && sudo docker run --name devlounge-container --env-file .env -d -p 3000:3000 jjalseu/devlounge:latest'
+          ssh -vvv -i so-precious-pie.pem -o \
+          StrictHostKeyChecking=no\
+          ec2-user@ec2-13-125-27-88.ap-northeast-2.compute.amazonaws.com \
+          'cd /home/ec2-user/devlounge-app &&
+##        Docker 컨테이너 중지 및 삭제
+          sudo docker stop devlounge-container || true &&
+          sudo docker rm devlounge-container || true &&
+#         Docker 시스템 정리 (디스크 공간 확보)     
+          sudo docker system prune -a -f &&
+          sudo docker volume prune -f &&
+#         최신 Docker 이미지 다운로드      
+          sudo docker pull jjalseu/devlounge:latest &&     
+#         새로운 컨테이너 실행      
+          sudo docker run --name devlounge-container --env-file .env -d -p 3000:3000 jjalseu/devlounge:latest'
 
