--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^11.0.1",
     "aws-sdk": "^2.1692.0",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "bullmq": "^5.34.10",
     "cache-manager": "^5.7.6",
     "cache-manager-redis-store": "2.0.0",
@@ -74,6 +74,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.1",
     "@types/jest": "^29.5.2",
