--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@nestjs/swagger": "^8.1.1",
     "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^11.0.1",
+    "@willsoto/nestjs-prometheus": "^6.0.2",
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^2.4.3",
     "bullmq": "^5.34.10",
@@ -61,6 +62,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.13.1",
+    "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
