--- a/prometheus.yml
+++ b/prometheus.yml
@@ -5,9 +5,9 @@ scrape_configs:
   - job_name: 'devlounge_app'
     metrics_path: '/metrics'
     static_configs:
-      - targets: ['host.docker.internal:3000']
+      - targets: ['devlounge:3000']
 
-  - job_name: 'node_exporter'
-    static_configs:
-      - targets: ['node_exporter:9100']
+#  - job_name: 'node_exporter'
+#    static_configs:
+#      - targets: ['node_exporter:9100']
 
