--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,3 +1,60 @@
+#name: Build and Deploy
+#
+#on:
+#  push:
+#    branches:
+#      - main
+#
+#jobs:
+#  build-and-push:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - name: Checkout Code
+#        uses: actions/checkout@v3
+#
+#      - name: Set Up Docker Buildx
+#        uses: docker/setup-buildx-action@v2
+#
+#      - name: Log In To Docker Hub
+#        uses: docker/login-action@v2
+#        with:
+#          username: ${{ secrets.DOCKER_USERNAME }}
+#          password: ${{ secrets.DOCKER_PASSWORD }}
+#
+#      - name: Build And Push Docker Image
+#        run: |
+#          docker buildx build --platform linux/amd64,linux/arm64 -t jjalseu/devlounge:latest -t jjalseu/devlounge:${{github.sha}} --push -f ./Dockerfile --target production .
+#
+#      - name: Install SSH key
+#        run: |
+#          echo "${{ secrets.EC2_PEM_KEY }}" | tr -d '\r' > so-precious-pie.pem
+#          chmod 400 so-precious-pie.pem
+#
+#      - name: Verify SSH key creation
+#        run: ls -l so-precious-pie.pem
+#
+#      - name: Deploy to EC2
+#        run: |
+#          ssh -vvv -i so-precious-pie.pem -o StrictHostKeyChecking=no ec2-user@ec2-13-125-27-88.ap-northeast-2.compute.amazonaws.com << 'EOF'
+#          cd /home/ec2-user/devlounge-app
+#
+#          # Docker 컨테이너 중지 및 삭제
+#          sudo docker stop devlounge-container || true
+#          sudo docker rm devlounge-container || true
+#
+#          # Docker 시스템 정리 (디스크 공간 확보)
+#          sudo docker system prune -a -f
+#          sudo docker volume prune -f
+#
+#          # 최신 Docker 이미지 다운로드
+#          sudo docker pull jjalseu/devlounge:latest
+#
+#          # 새로운 컨테이너 실행
+#          sudo docker run --name devlounge-container --env-file .env -d -p 3000:3000 jjalseu/devlounge:latest
+#          EOF
+#
+
 name: Build and Deploy
 
 on:
@@ -24,33 +81,34 @@ jobs:
 
       - name: Build And Push Docker Image
         run: |
-          docker buildx build --platform linux/amd64,linux/arm64 -t jjalseu/devlounge:latest -t jjalseu/devlounge:${{github.sha}} --push -f ./Dockerfile --target production .
+          docker buildx build --platform linux/amd64,linux/arm64 \
+            -t jjalseu/devlounge:latest \
+            -t jjalseu/devlounge:${{github.sha}} \
+            --push -f ./Dockerfile --target production .
 
-      - name: Install SSH key
+      - name: Install SSH Key
         run: |
           echo "${{ secrets.EC2_PEM_KEY }}" | tr -d '\r' > so-precious-pie.pem
           chmod 400 so-precious-pie.pem
 
-      - name: Verify SSH key creation
-        run: ls -l so-precious-pie.pem
-
       - name: Deploy to EC2
         run: |
-          ssh -vvv -i so-precious-pie.pem -o StrictHostKeyChecking=no ec2-user@ec2-13-125-27-88.ap-northeast-2.compute.amazonaws.com << 'EOF'
+          ssh -i so-precious-pie.pem -o StrictHostKeyChecking=no ec2-user@ec2-13-125-27-88.ap-northeast-2.compute.amazonaws.com << 'EOF'
+          
+          # 배포 디렉토리 이동
           cd /home/ec2-user/devlounge-app
           
-          # Docker 컨테이너 중지 및 삭제
-          sudo docker stop devlounge-container || true
-          sudo docker rm devlounge-container || true
+          # 기존 컨테이너 중지 및 삭제
+          sudo docker compose down
           
           # Docker 시스템 정리 (디스크 공간 확보)
           sudo docker system prune -a -f
           sudo docker volume prune -f
           
           # 최신 Docker 이미지 다운로드
-          sudo docker pull jjalseu/devlounge:latest
+          sudo docker compose pull
           
           # 새로운 컨테이너 실행
-          sudo docker run --name devlounge-container --env-file .env -d -p 3000:3000 jjalseu/devlounge:latest
+          sudo docker compose up -d --remove-orphans
+          
           EOF
-
