docker compos => 이미지만 가져와서 실행(빌드 스크립트 불필요하므로 제거)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,18 +4,12 @@ services:
   #SERVER
   app:
     container_name: devlounge
-    build:
-      context: .
-      dockerfile: Dockerfile
-      target: development
-    command: pnpm run start:dev
+    image: jjalseu/devlounge:latest
+    command: pnpm run start:prod
     ports:
       - "3000:3000"
     env_file:
       - .env
-    volumes:
-      - .:/usr/src/app
-      - /usr/src/app/node_modules
 #    networks:
 #      - monitoring  # 같은 네트워크 추가
 #
