docker compos => 이미지만 가져와서 실행(빌드 스크립트 불필요하므로 제거)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,12 +79,12 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build And Push Docker Image
-        run: |
-          docker buildx build --platform linux/amd64,linux/arm64 \
-            -t jjalseu/devlounge:latest \
-            -t jjalseu/devlounge:${{github.sha}} \
-            --push -f ./Dockerfile --target production .
+#      - name: Build And Push Docker Image
+#        run: |
+#          docker buildx build --platform linux/amd64,linux/arm64 \
+#            -t jjalseu/devlounge:latest \
+#            -t jjalseu/devlounge:${{github.sha}} \
+#            --push -f ./Dockerfile --target production .
 
       - name: Install SSH Key
         run: |
