--- a/prometheus.yml
+++ b/prometheus.yml
@@ -7,7 +7,7 @@ scrape_configs:
     static_configs:
       - targets: ['devlounge:3000']
 
-#  - job_name: 'node_exporter'
-#    static_configs:
-#      - targets: ['node_exporter:9100']
+  - job_name: 'node_exporter'
+    static_configs:
+      - targets: ['node_exporter:9100']
 
