--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,13 +39,10 @@ jobs:
           
           cd /home/ec2-user/devlounge-app
           
-          sudo docker-compose down
+          sudo docker-compose stop app
+          sudo docker-compose rm -f app
           
-          sudo docker system prune -a -f
-          sudo docker volume prune -f
-          
-          sudo docker-compose pull
-          
-          sudo docker-compose up -d --remove-orphans
+          sudo docker-compose pull app
+          sudo docker-compose up -d app
           
           EOF
